# apple_music_rpc

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: apple_music.icns
src/: fetch.rs  main.rs  rpc.rs
