[package]
name = "apple_music_rpc"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
discord-rich-presence = "1.1.0"
regex = "1.13.0"
tray-icon = "0.14"
tao = "0.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Media_Control", "Foundation_Collections"] }
