[package]
name = "apple_music_rpc"
version = "1.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
discord-rich-presence = "1.1.0"
regex = "1.13.0"
tray-icon = "0.14"
tao = "0.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.10"
urlencoding = "2.1.3"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Media_Control", "Foundation_Collections"] }

[package.metadata.bundle]
name = "AppleMusicRPC"
identifier = "com.sudoabc.applemusicrpc"
icon = ["assets/apple_music.icns"]
